# macro-platform

./: .env.example  .gitignore  README.md  db_init.py  db_reset.py  package-lock.json  pyproject.toml  register_admin.py  render.yaml  requirements.txt  run.bat  setup.bat  trustworthy_ai_framework_summary.md
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/schedules/: schedules.db
.streamlit/: config.toml
.tmp_dagster_home_685cuh2_/history/: runs.db
.tmp_dagster_home_685cuh2_/schedules/: schedules.db
.tmp_dagster_home_685cuh2_/storage/: imf_bronze  silver_records  world_bank_bronze
.tmp_dagster_home_bywop5cl/history/: runs.db
.tmp_dagster_home_bywop5cl/schedules/: schedules.db
.tmp_dagster_home_grkdpvh1/history/: runs.db
.tmp_dagster_home_grkdpvh1/schedules/: schedules.db
.tmp_dagster_home_mlkkubdm/history/: runs.db
.tmp_dagster_home_mlkkubdm/schedules/: schedules.db
.tmp_dagster_home_t2s94w1z/history/: runs.db
.tmp_dagster_home_t2s94w1z/schedules/: schedules.db
docker/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
eval/: README.md  __init__.py  countries.py  generate_ground_truth.py  ground_truth.json  score_rag.py  scoring.py
migrations/: 002_agent_runs.sql  init.sql
src/: config.py  database.py
src/agents/: alerts.py  chatbot.py  crawler.py  embeddings.py  forecaster.py  llm_client.py  news.py  pipeline.py  qa.py  researcher.py  static.py  summarizer.py
src/api/: main.py
src/orchestration/: __init__.py  assets.py  jobs.py  resources.py
tests/: test_trust_integration.py
trust/: __init__.py
(+115 files in other folders)
